------------------------------------------------------------
"o": new feature
"*": bug fixed
"!": change that can break compatibility with older version
------------------------------------------------------------

varsion: 1.2.0, 2012-08-24
==========================
* fix trouble of duplicated funcs between std_func and std_test(upper, lower).
o changed variable table from assoc list to Hashtbl for performance reason.

varsion: 1.1.0, 2012-06-06
==========================
o license changed. now under MIT license.
o new cmdline tool option "-interp".
o support eval syntax(see cheatsheet.tmpl).

version: 1.0.1, 2012-03-13:
==========================
o add new syntax "rawinclude"

version: 1.0.0,  2012-02-18:
==========================
o first release