@@ -8,6 +8,8 @@ varsion: 1.2.0, 2012-08-24
 ==========================
 * fix trouble of duplicated funcs between std_func and std_test(upper, lower).
 o changed variable table from assoc list to Hashtbl for performance reason.
+o add new type Thash for faster object.
+  now template models(Tobj) are automatically converted into Thash.
 
 varsion: 1.1.0, 2012-06-06
 ==========================
